--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ var _hmt = _hmt || [];
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="shortcut icon" href="./qianshengju_files/myIcon.ico">
 
-<meta name="keywords" content="Qing Lian, CS, SE, UESTC, University of Electronic Science and Technology of China">
-<meta name="description" content="Qing Lian&#39;s Homepage">
+<meta name="keywords" content="Shengju Qian, CS, SE, UESTC, University of Electronic Science and Technology of China">
+<meta name="description" content="Shengju Qian&#39;s Homepage">
 <link rel="stylesheet" href="./qianshengju_files/jemdoc.css" type="text/css">
 <title>Shengju Qian's Homepage</title>
 <script type="text/javascript" src="./qianshengju_files/jquery-1.12.4.min.js"></script></head>
