--- a/index.htm
+++ b/index.htm
@@ -370,8 +370,10 @@
             <p></p>
             <p align="right">
               <a href="https://jonbarron.info/"> Page Template </a>
+              <a class="pull-right" href="#">
+                <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=CU8xe9Z-Wjn88XyLXx5PAXRa-KFgVTNSp-e1SQErc4g&cl=ffffff&w=a"></script>
+              </a>
             </p>
-            <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=CU8xe9Z-Wjn88XyLXx5PAXRa-KFgVTNSp-e1SQErc4g&cl=ffffff&w=a"></script>
           </div>
         </footer>
       </td>
