--- a/index.htm
+++ b/index.htm
@@ -127,7 +127,7 @@
               <p align="center">
                 <a href="mailto:sjqian@cse.cuhk.edu.hk"> Email </a> /
                 <a href="https://www.linkedin.com/in/shengju-qian-0a3605112/"> LinkedIn </a> /
-                <a href="https://scholar.google.com/citations?user=4Zw1PJ8AAAAJ&amp;hl=en"> Google Scholar </a> /
+                <a href="https://scholar.google.com/citations?user=QNnWmasAAAAJ&hl=en"> Google Scholar </a> /
                 <a href="https://github.com/thesouthfrog"> Github </a>
               </p>
             </td>
@@ -371,7 +371,7 @@
             <p align="right">
               <a href="https://jonbarron.info/"> Page Template </a>
               <a class="pull-right" href="#">
-                <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=CU8xe9Z-Wjn88XyLXx5PAXRa-KFgVTNSp-e1SQErc4g&cl=ffffff&w=a"></script>
+                <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=CU8xe9Z-Wjn88XyLXx5PAXRa-KFgVTNSp-e1SQErc4g"></script>
               </a>
             </p>
           </div>
