--- a/index.htm
+++ b/index.htm
@@ -220,7 +220,7 @@
                 <br>
                 <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
                 <br>
-                [pdf coming soon] [code coming soon]
+                <a href="https://arxiv.org/pdf/1908.06440.pdf">[pdf]</a> [code coming soon] <a href="./Shengju_files/bibtex/iccv2019style_bib.txt">[bibtex]</a>
                 <br>
                 </p><p>
                   We propose a semi-supervised learning algorithm for boosting facial landmark detectors.
@@ -243,7 +243,7 @@
                 <br>
                 <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
                 <br>
-                [pdf coming soon] [project page]
+                [pdf coming soon] [project page] <a href="./Shengju_files/bibtex/iccv2019face_bib.txt">[bibtex]</a>
                 <br>
                 </p><p>
                   We propose Addtive Focal Variational Autoencoder(AF-VAE) for high fidelity face manipulation, which is robust to arbitrary shape variation.
@@ -266,7 +266,7 @@
                 <br>
                 <em>NeurIPS Workshop on Relational Representation Learning Workshop (NIPSW)</em>, 2018
                 <br>
-                <a href="https://r2learning.github.io/assets/papers/CameraReadySubmission%2011.pdf">[pdf]</a>
+                <a href="https://r2learning.github.io/assets/papers/CameraReadySubmission%2011.pdf">[pdf]</a> <a href="./Shengju_files/bibtex/nipsw2018cvae_bib.txt">[bibtex]</a>
                 <br>
                 </p><p>
                   We present a framework to learn to disentangle the object into content and style in a completely unsupervised manner.
