--- a/index.htm
+++ b/index.htm
@@ -243,7 +243,7 @@
                 <br>
                 <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
                 <br>
-                [pdf coming soon] [project page] <a href="./Shengju_files/bibtex/iccv2019face_bib.txt">[bibtex]</a>
+                <a href="https://arxiv.org/pdf/1908.07191.pdf">[pdf]</a> [project page] <a href="./Shengju_files/bibtex/iccv2019face_bib.txt">[bibtex]</a>
                 <br>
                 </p><p>
                   We propose Addtive Focal Variational Autoencoder(AF-VAE) for high fidelity face manipulation, which is robust to arbitrary shape variation.
