--- a/index.htm
+++ b/index.htm
@@ -227,7 +227,7 @@
               <p>
                 <papertitle>Aggregation via Separation: Boosting Facial Landmark Detector with Semi-Supervised Style Translation</papertitle>
                 <br>
-                <strong>Shengju Qian</strong>, Keqiang Sun, <a href="https://wywu.github.io/">Wayne Wu</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://jiaya.me/">Jiaya Jia</a>
+                <strong>Shengju Qian</strong>, <a href="https://keqiangsun.github.io/">Keqiang Sun</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://jiaya.me/">Jiaya Jia</a>
                 <br>
                 <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
                 <br>
@@ -280,7 +280,7 @@
                 <a href="https://r2learning.github.io/assets/papers/CameraReadySubmission%2011.pdf">[pdf]</a> <a href="./Shengju_files/bibtex/nipsw2018cvae_bib.txt">[bibtex]</a>
                 <br>
                 </p><p>
-                  We present a framework to learn to disentangle the object into content and style in a completely unsupervised manner.
+                  Presenting some practical methodologies that can boost CVAE's representation power on practical face stnthesis and modeling.
                 </p>
             </td>
           </tr>
