--- a/index.htm
+++ b/index.htm
@@ -250,7 +250,7 @@
               <p>
                 <papertitle>Make a Face: Towards Arbitrary High Fidelity Face Manipulation</papertitle>
                 <br>
-                <strong>Shengju Qian</strong>, <a href="https://kwanyeelin.github.io/">Kwan-Yee Lin</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, Yangxiaokang Liu, Quan Wang, <a href="https://scholar.google.com/citations?user=oqYL6fQAAAAJ&hl=en">Fumin Shen</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://scholar.google.com/citations?user=ayrg9AUAAAAJ&hl=en">Ran He</a>
+                <strong>Shengju Qian</strong>, <a href="https://kwanyeelin.github.io/">Kwan-Yee Lin</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, Yangxiaokang Liu, Quan Wang, <a href="http://cfm.uestc.edu.cn/~fshen/">Fumin Shen</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://scholar.google.com/citations?user=ayrg9AUAAAAJ&hl=en">Ran He</a>
                 <br>
                 <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
                 <br>
