--- a/index.htm
+++ b/index.htm
@@ -370,6 +370,19 @@
                 </ul>
 
 
+                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+                  <tbody><tr>
+                    <td>
+                      <heading>Academic services</heading>
+                    </td>
+                  </tr>
+                </tbody></table>
+                <ul>
+                  <li>
+                    <p>Conference Reviewer: CVPR 2020</p>
+                  </li>
+                </ul>
+
         <br>
         <!-- Footer ================================================== -->
         <hr>
