--- a/index.htm
+++ b/index.htm
@@ -347,6 +347,23 @@
                 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
                   <tbody><tr>
                     <td>
+                      <heading>Services</heading>
+                    </td>
+                  </tr>
+                </tbody></table>
+                <ul>
+                  <li>
+                    <p>Conference Reviewer: CVPR 2020</p>
+                  </li>
+                  <li>
+                    <p>Teaching: CSCI 2040B: Introduction to Python (2019 Fall)</p>
+                  </li>
+                </ul>
+
+
+                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+                  <tbody><tr>
+                    <td>
                       <heading>Honors and Awards</heading>
                     </td>
                   </tr>
@@ -366,20 +383,6 @@
                   </li>
                   <li>
                     <p>Special Prize Scholarship, UESTC, 2018</p>
-                  </li>
-                </ul>
-
-
-                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-                  <tbody><tr>
-                    <td>
-                      <heading>Academic services</heading>
-                    </td>
-                  </tr>
-                </tbody></table>
-                <ul>
-                  <li>
-                    <p>Conference Reviewer: CVPR 2020</p>
                   </li>
                 </ul>
 
