--- a/index.htm
+++ b/index.htm
@@ -231,7 +231,7 @@
                 <br>
                 <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
                 <br>
-                <a href="https://arxiv.org/pdf/1908.06440.pdf">[pdf]</a> <a href="https://github.com/TheSouthFrog/stylealign">[code]</a> <a href="./Shengju_files/bibtex/iccv2019style_bib.txt">[bibtex]</a>
+                <a href="https://thesouthfrog/about.me/Shengju_files/stylealign.pdf">[pdf]</a> <a href="https://github.com/TheSouthFrog/stylealign">[code]</a> <a href="./Shengju_files/bibtex/iccv2019style_bib.txt">[bibtex]</a>
                 <br>
                 </p><p>
                   We propose a semi-supervised learning algorithm for boosting facial landmark detectors.
