--- a/index.htm
+++ b/index.htm
@@ -221,17 +221,17 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
           <tbody><tr>
             <td width="25%" align="center">
-              <img src="./Shengju_files/iccv2019style.png" alt="dise" width="160" height="100">
+              <img src="./Shengju_files/aaai2020_TIN.png" alt="dise" width="160" height="100">
             </td>
             <td width="75%" valign="top">
               <p>
                 <papertitle>Temporal Interlacing Network</papertitle>
                 <br>
-                <strong>Shengju Qian</strong>, <a href="https://keqiangsun.github.io/">Keqiang Sun</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://jiaya.me/">Jiaya Jia</a>
+                 Hao Shao, <strong>Shengju Qian</strong>, <a href="https://liuyu.us/">Yu Liu</a>
                 <br>
-                <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
+                <em>AAAI Conference on Artificial Intelligence (AAAI)</em>, 2020
                 <br>
-                <a href="https://arxiv.org/pdf/1908.06440.pdf">[pdf]</a> <a href="https://github.com/TheSouthFrog/stylealign">[code]</a> <a href="./Shengju_files/bibtex/iccv2019style_bib.txt">[bibtex]</a>
+                <a href="./Shengju_files/TIN.pdf">[pdf]</a> [code coming soon]</a> <a href="./Shengju_files/bibtex/aaai2020tin_bib.txt">[bibtex]</a>
                 <br>
                 </p><p>
                   We propose a semi-supervised learning algorithm for boosting facial landmark detectors.
@@ -248,7 +248,7 @@
               <p>
                 <papertitle>Aggregation via Separation: Boosting Facial Landmark Detector with Semi-Supervised Style Translation</papertitle>
                 <br>
-                <strong>Shengju Qian</strong>, <a href="https://keqiangsun.github.io/" style="text-decoration: none;">Keqiang Sun</a>, <a href="https://wywu.github.io/" style="text-decoration: none;">Wayne Wu</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en" style="text-decoration: none;">Chen Qian</a>, <a href="https://jiaya.me/" style="text-decoration: none;">Jiaya Jia</a>
+                <strong>Shengju Qian</strong>, <a href="https://keqiangsun.github.io/">Keqiang Sun</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://jiaya.me/">Jiaya Jia</a>
                 <br>
                 <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
                 <br>
