--- a/index.htm
+++ b/index.htm
@@ -265,7 +265,7 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
           <tbody><tr>
             <td width="25%" align="center">
-              <img src="./Shengju_files/iccv2019face.png" alt="makeface" width="160" height="60">
+              <img src="./Shengju_files/iccv2019face.jpg" alt="makeface" width="160" height="80">
             </td>
             <td width="75%" valign="top">
               <p>
@@ -301,7 +301,7 @@
                 <a href="https://r2learning.github.io/assets/papers/CameraReadySubmission%2011.pdf">[pdf]</a> <a href="./Shengju_files/bibtex/nipsw2018cvae_bib.txt">[bibtex]</a>
                 <br>
                 </p><p>
-                  Presenting some practical methodologies that can boost CVAE's representation power on practical face stnthesis and modeling.
+                  Presenting a practical methodology that can boost CVAE's representation power on face synthesis and modeling.
                 </p>
             </td>
           </tr>
