--- a/index.htm
+++ b/index.htm
@@ -227,7 +227,7 @@
               <p>
                 <papertitle>Temporal Interlacing Network</papertitle>
                 <br>
-                 Hao Shao, <strong>Shengju Qian</strong>, <a href="https://liuyu.us/">Yu Liu</a>
+                 Hao Shao, <strong><B>Shengju Qian</B></strong>, <a href="https://liuyu.us/">Yu Liu</a>
                 <br>
                 <em>AAAI Conference on Artificial Intelligence (AAAI)</em>, 2020
                 <br>
@@ -248,7 +248,7 @@
               <p>
                 <papertitle>Aggregation via Separation: Boosting Facial Landmark Detector with Semi-Supervised Style Translation</papertitle>
                 <br>
-                <strong>Shengju Qian</strong>, <a href="https://keqiangsun.github.io/">Keqiang Sun</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://jiaya.me/">Jiaya Jia</a>
+                <strong><B>Shengju Qian</B></strong>, <a href="https://keqiangsun.github.io/">Keqiang Sun</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://jiaya.me/">Jiaya Jia</a>
                 <br>
                 <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
                 <br>
@@ -271,7 +271,7 @@
               <p>
                 <papertitle>Make a Face: Towards Arbitrary High Fidelity Face Manipulation</papertitle>
                 <br>
-                <strong>Shengju Qian</strong>, <a href="https://kwanyeelin.github.io/">Kwan-Yee Lin</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, Yangxiaokang Liu, Quan Wang, <a href="http://cfm.uestc.edu.cn/~fshen/">Fumin Shen</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://scholar.google.com/citations?user=ayrg9AUAAAAJ&hl=en">Ran He</a>
+                <strong><B>Shengju Qian</B></strong>, <a href="https://kwanyeelin.github.io/">Kwan-Yee Lin</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, Yangxiaokang Liu, Quan Wang, <a href="http://cfm.uestc.edu.cn/~fshen/">Fumin Shen</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://scholar.google.com/citations?user=ayrg9AUAAAAJ&hl=en">Ran He</a>
                 <br>
                 <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
                 <br>
@@ -294,7 +294,7 @@
               <p>
                 <papertitle>Extending the Capacity of CVAE for Face Synthesis and Modeling</papertitle>
                 <br>
-                <strong>Shengju Qian</strong>, <a href="https://wywu.github.io/">Wayne Wu</a>, Yangxiaokang Liu, Beier Zhu, <a href="https://scholar.google.com/citations?user=oqYL6fQAAAAJ&hl=en">Fumin Shen</a>
+                <strong><B>Shengju Qian</B></strong>, <a href="https://wywu.github.io/">Wayne Wu</a>, Yangxiaokang Liu, Beier Zhu, <a href="https://scholar.google.com/citations?user=oqYL6fQAAAAJ&hl=en">Fumin Shen</a>
                 <br>
                 <em>NeurIPS Workshop on Relational Representation Learning Workshop (NIPSW)</em>, 2018
                 <br>
