--- a/index.htm
+++ b/index.htm
@@ -133,7 +133,7 @@
               </p>
               <p>
                 My research interests lie primarily in computer vision and deep learning,
-                particularly focusing on human face/body understanding and representation learning, such as video supervised learning.
+                particularly focusing on human face/body understanding and representation learning, such as self supervised learning.
               </p>
               <p align="center">
                 <a href="mailto:sjqian@cse.cuhk.edu.hk"> Email </a> /
