--- a/index.htm
+++ b/index.htm
@@ -234,7 +234,7 @@
                 <a href="./Shengju_files/TIN.pdf">[pdf]</a> [code coming soon]</a> <a href="./Shengju_files/bibtex/aaai2020tin_bib.txt">[bibtex]</a>
                 <br>
                 </p><p>
-                  We propose a semi-supervised learning algorithm for boosting facial landmark detectors.
+                  We propose an efficient and accurate framework for video recognition with TIN, which has a strong capability of temporal modeling.
                 </p>
             </td>
           </tr>
