--- a/index.htm
+++ b/index.htm
@@ -160,7 +160,8 @@
           <tbody><tr>
             <p>
             <ul>
-                <li><font color="ff0000"><strong><em>NEW!</em></strong></font>&nbsp&nbsp Two papers are accepted by ICCV 2019.</li>
+                <li><font color="ff0000"><strong><em>NEW!</em></strong></font>&nbsp&nbsp Code of TIN is available at <a href="https://github.com/Sense-X/X-Temporal">X-Temporal</a>.</li>
+                <li>2019-06: Two papers are accepted by ICCV 2019.</li>
                 <li>2018-10: One paper is accepted by NeurIPS 2018, Relational Representation Learning Workshop. </li>
                 <li>2018-09: We ranked the 2nd place at <a href="http://ai.bu.edu/visda-2018/">ECCV 2018 VisDA Challenge</a>.</li>
                 <li>2018-06: We ranked the 2nd place at <a href="https://www.vision.ee.ethz.ch/webvision/2018/workshop.html">CVPR 2018 WebVision Challenge</a>.</li>
@@ -231,7 +232,7 @@
                 <br>
                 <em>AAAI Conference on Artificial Intelligence (AAAI)</em>, 2020
                 <br>
-                <a href="./Shengju_files/TIN.pdf">[pdf]</a> [code coming soon]</a> <a href="./Shengju_files/bibtex/aaai2020tin_bib.txt">[bibtex]</a>
+                <a href="./Shengju_files/TIN.pdf">[pdf]</a> <a href="https://github.com/Sense-X/X-Temporal">[code]</a> <a href="./Shengju_files/bibtex/aaai2020tin_bib.txt">[bibtex]</a>
                 <br>
                 </p><p>
                   We propose an efficient and accurate framework for video recognition with TIN, which has a strong capability of temporal modeling.
@@ -374,7 +375,10 @@
                 </tbody></table>
                 <ul>
                   <li>
-                    <p>Conference Reviewer: CVPR 2020</p>
+                    <p>Conference Reviewer: CVPR 2020, ECCV 2020</p>
+                  </li>
+                  <li>
+                    <p>Journal Reviewer: Transactions on Image Processing(TIP) </p>
                   </li>
                   <li>
                     <p>Teaching: CSCI 2040B: Introduction to Python (2019 Fall)</p>
