--- a/index.htm
+++ b/index.htm
@@ -393,6 +393,7 @@
               <a href="https://jonbarron.info/"> Page Template </a>
               <a class="pull-right" href="#">
                 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=CU8xe9Z-Wjn88XyLXx5PAXRa-KFgVTNSp-e1SQErc4g"></script>
+                <iframe height='160' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/98533276/activity-summary/15fb070275959ded16fd9ba8d90e08cc7a26a745'></iframe>
               </a>
             </p>
           </div>
