--- a/index.htm
+++ b/index.htm
@@ -116,15 +116,13 @@
                 <name>Shengju Qian</name>
               </p>
               <p>
-                I am a PhD student at <a href="https://www.cse.cuhk.edu.hk/en/">The Chinese University of Hong Kong</a>, supervised by <a href="https://jiaya.me/">Prof. Jiaya Jia</a>.
+                I received my PhD at <a href="https://www.cse.cuhk.edu.hk/en/">The Chinese University of Hong Kong</a>, supervised by <a href="https://jiaya.me/">Prof. Jiaya Jia</a>.
               </p>
               <p>
-                Prior to that, I received my Bachelor degree from the University of Electronic Science and Technology of China. I've spent wonderful time with my internship at Amazon AI, Tencent Youtu X-Lab, and SenseTime Research.
+                My research interests lie primarily in generative modeling and transformers.
               </p>
               <p>
-                My research interests lie primarily in computer vision and deep learning,
-                particularly focusing on representaion learning and network designs, including self-supervised learning, transformers for vision, and generative models for face/body understanding.
-              </p>
+                I have spent wonderful times at Google Brain, Amazon AI, and SenseTime Research.
               <p align="center">
                 <a href="mailto:sjqian@cse.cuhk.edu.hk"> Email </a> /
                 <a href="https://www.linkedin.com/in/shengju-qian-0a3605112/"> LinkedIn </a> /
@@ -141,33 +139,13 @@
           </tr>
         </tbody></table>
 
-        <!--##################### News ####################-->
-        <br><br>
-         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-          <tbody><tr>
-              <heading>News</heading>
-          </tr>
-        </tbody></table>
-
-         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-          <tbody><tr>
-            <p>
-            <ul>
-                <li>2021-10: One paper is accpeted to NeurIPS 2021. We explore anti-aliasing designs for vision transformers.</li>
-            </ul>
-            </p>
-          </tr>
-        </tbody></table>
-        </br>
-
-
 
 
 
                 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
                   <tbody><tr>
                     <td width="100%" valign="middle">
-                      <heading>Publications</heading>
+                      <heading>Selected Publications</heading>
                     </td>
                   </tr>
                 </tbody></table>
