--- a/index.htm
+++ b/index.htm
@@ -142,118 +142,6 @@
 
 
 
-                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-                  <tbody><tr>
-                    <td width="100%" valign="middle">
-                      <heading>Selected Publications</heading>
-                    </td>
-                  </tr>
-                </tbody></table>
-
-                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-                  <tbody><tr>
-                    <td width="25%" align="center">
-                      <img src="./Shengju_files/neurips_arm.png" alt="dise" width="240" height="96">
-                    </td>
-                    <td width="75%" valign="top">
-                      <p>
-                        <papertitle>Blending Anti-Aliasing into Vision Transformer</papertitle>
-                        <br>
-                         <strong><u>Shengju Qian</u></strong>, Hao Shao, <a href="https://bryanyzhu.github.io/">Yi Zhu</a>, <a href="https://scholar.google.com/citations?user=Z_WrhK8AAAAJ&hl=en">Mu Li</a>, <a href="https://jiaya.me/">Jiaya Jia</a>
-                        <br>
-                        <em>Neural Information Processing Systems (NeurIPS) </em>, 2021
-                        <br>
-                        <a href="./Shengju_files/neurips_arm.pdf">[pdf]</a> <a href="https://github.com/amazon-research/anti-aliasing-transformer">[code]</a> <a href="./Shengju_files/bibtex/neurips2020arm_bib.txt">[bibtex]</a>
-                        <br>
-                        </p><p>
-                          We explore anti-aliasing strategies for vision transformers to mitigate the drawback of 'patch-wise' tokenization.
-                        </p>
-                    </td>
-                  </tr>
-
-                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-                      <p>
-                        <papertitle>Temporal Interlacing Network</papertitle>
-                        <br>
-                         Hao Shao, <strong><u>Shengju Qian</u></strong>, <a href="https://liuyu.us/">Yu Liu</a>
-                        <br>
-                        <em>AAAI Conference on Artificial Intelligence (AAAI)</em>, 2020
-                        <br>
-                        <a href="./Shengju_files/TIN.pdf">[pdf]</a> <a href="https://github.com/Sense-X/X-Temporal">[code]</a> <a href="./Shengju_files/bibtex/aaai2020tin_bib.txt">[bibtex]</a>
-                        <br>
-                        </p><p>
-                          We propose an efficient and accurate framework for video recognition with TIN, which has a strong capability of temporal modeling.
-                        </p>
-                        
-                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-                  <tbody><tr>
-                    <td width="25%" align="center">
-                      <img src="./Shengju_files/iccv2019style.png" alt="dise" width="200" height="80">
-                    </td>
-                    <td width="75%" valign="top">
-                      <p>
-                        <papertitle>Aggregation via Separation: Boosting Facial Landmark Detector with Semi-Supervised Style Translation</papertitle>
-                        <br>
-                        <strong><u>Shengju Qian</u></strong>, <a href="https://keqiangsun.github.io/">Keqiang Sun</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://jiaya.me/">Jiaya Jia</a>
-                        <br>
-                        <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
-                        <br>
-                        <a href="https://arxiv.org/pdf/1908.06440.pdf">[pdf]</a> <a href="https://github.com/TheSouthFrog/stylealign">[code]</a> <a href="./Shengju_files/bibtex/iccv2019style_bib.txt">[bibtex]</a>
-                        <br>
-                        </p><p>
-                          We propose a semi-supervised learning algorithm for boosting facial landmark detectors.
-                        </p>
-                    </td>
-                  </tr>
-
-                </tbody></table>
-
-                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-                  <tbody><tr>
-                    <td width="25%" align="center">
-                      <img src="./Shengju_files/iccv2019face.jpg" alt="makeface" width="210" height="140">
-                    </td>
-                    <td width="75%" valign="top">
-                      <p>
-                        <papertitle>Make a Face: Towards Arbitrary High Fidelity Face Manipulation</papertitle>
-                        <br>
-                        <strong><u>Shengju Qian</u></strong>, <a href="https://kwanyeelin.github.io/">Kwan-Yee Lin</a>, <a href="https://wywu.github.io/">Wayne Wu</a>, <a href="https://scholar.google.com/citations?user=AerkT0YAAAAJ&hl=en">Chen Qian</a>, <a href="https://scholar.google.com/citations?user=ayrg9AUAAAAJ&hl=en">Ran He</a> et al
-                        <br>
-                        <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019
-                        <br>
-                        <a href="https://arxiv.org/pdf/1908.07191.pdf">[pdf]</a> [project page] <a href="./Shengju_files/bibtex/iccv2019face_bib.txt">[bibtex]</a>
-                        <br>
-                        </p><p>
-                          We propose Addtive Focal Variational Autoencoder(AF-VAE) for high fidelity face manipulation, which is robust to arbitrary shape variation.
-                        </p>
-                    </td>
-                  </tr>
-
-                </tbody></table>
-
-                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-                  <tbody><tr>
-                    <td width="25%" align="center">
-                      <img src="./Shengju_files/nipsw2018cvae.png" alt="cvae" width="160" height="60">
-                    </td>
-                    <td width="75%" valign="top">
-                      <p>
-                        <papertitle>Extending the Capacity of CVAE for Face Synthesis and Modeling</papertitle>
-                        <br>
-                        <strong><u>Shengju Qian</u></strong>, <a href="https://wywu.github.io/">Wayne Wu</a>, Yangxiaokang Liu, Beier Zhu, <a href="https://scholar.google.com/citations?user=oqYL6fQAAAAJ&hl=en">Fumin Shen</a>
-                        <br>
-                        <em>NeurIPS Workshop on Relational Representation Learning Workshop (NIPSW)</em>, 2018
-                        <br>
-                        <a href="https://r2learning.github.io/assets/papers/CameraReadySubmission%2011.pdf">[pdf]</a> <a href="./Shengju_files/bibtex/nipsw2018cvae_bib.txt">[bibtex]</a>
-                        <br>
-                        </p><p>
-                          Presenting a practical methodology that can boost CVAE's representation power on face synthesis and modeling.
-                        </p>
-                    </td>
-                  </tr>
-
-
-
                   <br><br>
                   <table width="100%" align="left" border="0" cellspacing="0" cellpadding="20">
                     <tr>
@@ -263,7 +151,14 @@
                   <table width="100%" align="center" border="0" cellpadding="10">
                     <tbody><tr>
                       <td width="75%" valign="top">
-                        <strong>June. 2020 - Present</strong>, <i><b>Amazon AI</b></i> Mentor: Yi Zhu, Mu Li. <br>
+                        <strong>June. 2022 - Dec. 2022</strong>, <i><b>Google Brain</b></i> Mentor: Han Zhang, Huiwen Chang. <br>
+                      </td>
+                    </tr>
+                  </tbody></table>
+                  <table width="100%" align="center" border="0" cellpadding="10">
+                    <tbody><tr>
+                      <td width="75%" valign="top">
+                        <strong>June. 2020 - June. 2022</strong>, <i><b>Amazon AI</b></i> Mentor: Yi Zhu, Mu Li. <br>
                       </td>
                     </tr>
                   </tbody></table>
@@ -294,42 +189,13 @@
                   </tbody></table>
                   <ul>
                   <li>
-                    <p>Conference Reviewer: CVPR 2020-2021, ECCV 2020, AAAI 2020-2021, ICML 2021, NeurIPS 2021, ICLR 2021</p>
+                    <p>Conference Reviewer: CVPR, ECCV, AAAI, ICML, NeurIPS, ICLR </p>
                   </li>
                   <li>
                     <p>Journal Reviewer:Transactions on Image Processing(TIP), Transactions on Pattern Analysis and Machine Intelligence(TPAMI) </p>
                   </li>
                   <li>
                     <p>Teaching: CSCI 2040B: Introduction to Python, ENGG 2780A： Statistics for Engineers</p>
-                  </li>
-                </ul>
-
-
-                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-                  <tbody><tr>
-                    <td>
-                      <heading>Honors and Awards</heading>
-                    </td>
-                  </tr>
-                </tbody></table>
-                <ul>
-                  <li>
-                    <p>Postgraduate Studentship, CUHK, 2019-2023</p>
-                  </li>
-                  <li>
-                    <p>Outstanding Reviewer, ECCV, 2020</p>
-                  </li>
-                  <li>
-                    <p>Outstanding Bachelor Thesis, UESTC, 2019</p>
-                  </li>
-                  <li>
-                    <p>First Runner-up, ECCV VisDA Challenge(Rank 2nd), 2018</p>
-                  </li>
-                  <li>
-                    <p>First Runner-up, CVPR Webvision Challenge(Rank 2nd), 2018</p>
-                  </li>
-                  <li>
-                    <p>Special Prize Scholarship, UESTC, 2018</p>
                   </li>
                 </ul>
 
@@ -358,7 +224,7 @@
         <footer class="footer">
           <div class="container">
             <p>
-              &nbsp;&nbsp;&nbsp;Updated Nov. 2021</p>
+              &nbsp;&nbsp;&nbsp;Updated Aug. 2024</p>
             <p></p>
             <p align="right">
               <a href="https://jonbarron.info/"> Page Template </a>
