--- a/index.htm
+++ b/index.htm
@@ -139,8 +139,18 @@
           </tr>
         </tbody></table>
 
-
-
+        <br><br>
+        <table width="100%" align="left" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+            <heading>Publication</heading>
+          </tr>
+          <table width="100%" align="center" border="0" cellpadding="10">
+            <tbody><tr>
+              <td width="75%" valign="top">
+                <strong><a href="https://scholar.google.com/citations?user=QNnWmasAAAAJ&hl=en"> Google Scholar </a></strong><br>
+              </td>
+            </tr>
+          </tbody></table>
 
                   <br><br>
                   <table width="100%" align="left" border="0" cellspacing="0" cellpadding="20">
