--- a/index.htm
+++ b/index.htm
@@ -218,10 +218,10 @@
                 </tbody></table>
                 <ul>
                   <li>
-                    <p>I am a beginner for Triathlon.</p>
+                    <p>I am a beginner for trail running and triathlon.</p>
                   </li>
                   <li>
-                    <p>Used to cycle long distances(such as Qinghai-Tibet: around 2000KM).</p>
+                    <p>Used to cycle long distances for travel.</p>
                     <div align="center"><img src="Shengju_files/bike.jpg" height="200"/></div>
                     <div align="center">Hoh Xil, 2016</div>
                   </li>
